# meteen

./: .gitignore  flake.nix
tp-backend/: .gitignore  Cargo.toml  generate-bindings.sh
tp-backend/bindings/: CategoryModel.ts  CreateCategory.ts  CreateTask.ts  PatchTask.ts  TaskModel.ts
tp-backend/migration/: Cargo.toml
tp-backend/migration/src/: m20220101_000001_create_table.rs
tp-backend/src/: cfg.rs  main.rs
tp-backend/src/entity/: category.rs  mod.rs  prelude.rs  task.rs
tp-backend/src/routes/: category.rs  mod.rs  task.rs
tp-backend/src/utils/: errors.rs  mod.rs
tp-frontend/: package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json
tp-frontend/src/: App.css  App.tsx
tp-frontend/src/components/: CategoryButton.tsx  CreateCategory.tsx  HomeCard.tsx  Overview.tsx
tp-frontend/src/lib/: backend.ts
tp-frontend/src/lib/backend-bindings/: bindings.ts  generated
tp-frontend/src/routes/: CreateTask.tsx  Home.tsx
