[package]
name = "tp-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros", "tracing"] }
chrono = { version = "0.4.41", features = ["serde"] }
color-eyre = "0.6.4"
figment = { version = "0.10.19", features = ["toml", "env"] }
sea-orm = { version = "1.1.11", features = ["runtime-tokio", "macros", "sqlx-sqlite"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.5", features = ["sqlite"] }
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread", "tracing"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
